# adsp-mer-2025

./: LICENSE  pyproject.toml  requirements.txt
notebooks/: dataset_test.ipynb
src/adsp_mer/: __init__.py
src/adsp_mer/models/: audio_classifier_model.py  factory.py  multimodal_model.py
src/adsp_mer/models/fusion/: README.md  __init__.py  factory.py
src/adsp_mer/models/fusion/fusion_models/: __init__.py  base_fusion_module.py  cross_attention_fusion.py  pooling_fusion.py  self_attention_fusion.py
src/adsp_mer/models/necks/: README.md  __init__.py  neck.py
src/adsp_mer/models/text/: README.md  __init__.py  factory.py
src/adsp_mer/models/text/text_models/: XLMRoberta.py  __init__.py  base_text_model.py  mBart.py
src/adsp_mer/preprocessing/: factory.py
src/adsp_mer/preprocessing/datasets/: esd.py  iemocap.py
src/adsp_mer/preprocessing/preprocessors/: audio_preprocessor.py  text_preprocessor.py
src/adsp_mer/training/: __init__.py
src/adsp_mer_2025/: __init__.py
tests/: test_base.py
