[project]
name = "adsp-mer-2025"
version = "0.1.0"
description = "The goal of the project is to integrate speech and text modalities to enhance emotion recognition performance beyond using text or speech alone."
readme = "README.md"
authors = [
    { name = "Juan Jose Marquez Villacis", email = "juan.marquez@linksfoundation.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.3",
    "torchaudio>=2.9.0",
    "torchcodec>=0.8.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
